change blade version to 4.*

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
         "windwalker/renderer": "~2.0",
-        "illuminate/view": "~5.0"
+        "illuminate/view": "4.*"
     }
 }
